src-tauri/tests/snapshots/wire_format__github_get_pull_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 344
expression: args
---
{
  "number": 42,
  "owner": "example",
  "repo": "repo"
}
