src-tauri/tests/snapshots/wire_format__github_identity.snap
---
source: tests/wire_format.rs
assertion_line: 314
expression: "serde_json::to_value(&id).unwrap()"
---
{
  "avatar_url": "https://avatars.githubusercontent.com/u/1?v=4",
  "email": "octo@example.com",
  "id": "1",
  "login": "octocat",
  "name": "Octo Cat"
}
