src-tauri/tests/snapshots/wire_format__github_identity_cli.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&id).unwrap()"
---
{
  "avatar_url": null,
  "email": null,
  "id": "1",
  "login": "octocat",
  "name": null,
  "token_source": "cli"
}
