src-tauri/tests/snapshots/wire_format__github_list_pulls_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 338
expression: args
---
{
  "owner": "example",
  "repo": "repo"
}
