src-tauri/tests/snapshots/wire_format__project_response.snap
---
source: tests/wire_format.rs
assertion_line: 221
expression: "serde_json::to_value(&project).unwrap()"
---
{
  "created_at": "2026-05-15 00:00:00",
  "id": "00000000-0000-0000-0000-000000000001",
  "name": "repo",
  "path": "/Users/example/code/repo",
  "updated_at": "2026-05-15 00:00:00"
}
