src-tauri/tests/snapshots/wire_format__projects_add_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 202
expression: request_args
---
{
  "path": "/Users/example/code/repo"
}
