src-tauri/tests/snapshots/wire_format__projects_error_envelope.snap
---
source: tests/wire_format.rs
assertion_line: 234
expression: "serde_json::to_value(&err).unwrap()"
---
{
  "code": "duplicate_path",
  "message": "a project already tracks this path: /Users/example/code/repo"
}
