src-tauri/tests/snapshots/wire_format__projects_remove_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 208
expression: request_args
---
{
  "id": "00000000-0000-0000-0000-000000000001"
}
