src-tauri/tests/snapshots/wire_format__subscribe_ui_mutations_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 152
expression: request_args
---
{
  "subId": "renderer-1"
}
