src-tauri/tests/snapshots/wire_format__task_response.snap
---
source: tests/wire_format.rs
assertion_line: 286
expression: "serde_json::to_value(&task).unwrap()"
---
{
  "created_at": "2026-05-15 00:00:00",
  "id": "00000000-0000-0000-0000-000000000001",
  "name": "Feature X",
  "path": "/Users/example/code/repo/.emdash-worktrees/00000000-0000-0000-0000-000000000001",
  "project_id": "00000000-0000-0000-0000-000000000002",
  "pty_id": null,
  "source_branch": {
    "branch": "main",
    "type": "local"
  },
  "status": "active",
  "updated_at": "2026-05-15 00:00:00"
}
