src-tauri/tests/snapshots/wire_format__task_source_branch_local.snap
---
source: tests/wire_format.rs
assertion_line: 342
expression: "serde_json::to_value(&s).unwrap()"
---
{
  "branch": "main",
  "type": "local"
}
